--- a/main.html
+++ b/main.html
@@ -37,13 +37,23 @@
             <h2>Hello</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur corporis quam doloribus! Sunt,
                 corrupti consequatur?</p>
-            <button onclick="closeWindow()">Close</button>
+
+            <button onclick="closeWindow()" class="close"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 48 48">
+                <!-- Красный фон -->
+                <rect width="48" height="48" fill="red"/>
+                <!-- Белый крестик -->
+                <g fill="none" stroke="white" stroke-width="4">
+                  <line x1="12" y1="12" x2="36" y2="36" />
+                  <line x1="12" y1="36" x2="36" y2="12" />
+                </g>
+              </svg>
+              </button>
         </div>
     </div>
 
     <section class="slider">
         <div class="top">
-            <button class="btn" id="btnLeft">
+            <button class="btn" id="btnLeft" onclick="previousSlide()">
                 <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15 7L10 12L15 17" stroke="white" stroke-width="1.5" stroke-linecap="round"
                         stroke-linejoin="round" />
@@ -75,7 +85,7 @@
     </section>
 
     <script src="js/main.js"></script>
-    <script src="js/slider.js"></script>
+    <!-- <script src="js/slider.js"></script> -->
 </body>
 
 </html>
